--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="col-md-6">
             <h2 class="h4 mb-4">My Mission</h2>
             <p>To help people become better versions of themselves, with love and effort. To show them that they are a noble child of the most high king.</p>
-            <p>Each website it built and prayed for, as well as helps me and others stay on the mission field.</p>
+            <p>Each website is built and prayed for. On top of the, every website built helps me and others stay on the mission field.</p>
             <p><a href="#work" class="btn btn-primary text-white px-5">My work</a></p>
           </div>
           <div class="col-md-6">
